Food Delivery related changes added in tenant locations table + Modules table dropped in favour of TenantModuleEnum + minor fixes Imported from Changeset 2965

--- a/GaneEcommerce.Data/Ganedata.Core.Data.csproj
+++ b/GaneEcommerce.Data/Ganedata.Core.Data.csproj
@@ -1015,6 +1015,10 @@
     <Compile Include="Migrations\202007241749548_added_ProductAvailabilityNotificationSettings_table.designer.cs">
       <DependentUpon>202007241749548_added_ProductAvailabilityNotificationSettings_table.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202007262322244_Modiles-Table-Deleted-plus-delivery-collection-price-lists-added-in-tenant-locations.cs" />
+    <Compile Include="Migrations\202007262322244_Modiles-Table-Deleted-plus-delivery-collection-price-lists-added-in-tenant-locations.designer.cs">
+      <DependentUpon>202007262322244_Modiles-Table-Deleted-plus-delivery-collection-price-lists-added-in-tenant-locations.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyDbConfiguration.cs" />
     <Compile Include="Helpers\DataImportFactory.cs" />
     <Compile Include="IApplicationContext.cs" />
@@ -2096,6 +2100,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202007241749548_added_ProductAvailabilityNotificationSettings_table.resx">
       <DependentUpon>202007241749548_added_ProductAvailabilityNotificationSettings_table.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202007262322244_Modiles-Table-Deleted-plus-delivery-collection-price-lists-added-in-tenant-locations.resx">
+      <DependentUpon>202007262322244_Modiles-Table-Deleted-plus-delivery-collection-price-lists-added-in-tenant-locations.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
