--- a/GaneEcommerce.Entities/Ganedata.Core.Entities.csproj
+++ b/GaneEcommerce.Entities/Ganedata.Core.Entities.csproj
@@ -229,6 +229,7 @@
     <Compile Include="Domain\Models\UISetting.cs" />
     <Compile Include="Domain\ViewModels\ApiCredentialsViewModel.cs" />
     <Compile Include="Domain\ViewModels\ApiModels\TenantLocationsSync.cs" />
+    <Compile Include="Domain\ViewModels\FileUploaderViewModel.cs" />
     <Compile Include="Domain\ViewModels\WebsiteCartItemViewModel.cs" />
     <Compile Include="Domain\ViewModels\WebsiteShippingRulesViewModel.cs" />
     <Compile Include="Domain\ViewModels\CollectionPointViewModel.cs" />
