--- a/WMS/WarehouseZone.csproj
+++ b/WMS/WarehouseZone.csproj
@@ -2729,6 +2729,7 @@
     <Content Include="Views\Theme\Default\TenantDepartment\Edit.cshtml" />
     <Content Include="Views\Theme\Default\TenantDepartment\Index.cshtml" />
     <Content Include="Views\Theme\Default\TenantDepartment\_TenantDepartmentList.cshtml" />
+    <Content Include="Views\Theme\Default\Shared\_FileUploader.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
