--- a/GaneEcommerce.Entities/Ganedata.Core.Entities.csproj
+++ b/GaneEcommerce.Entities/Ganedata.Core.Entities.csproj
@@ -181,6 +181,7 @@
   <ItemGroup>
     <Compile Include="CustomAttributes\CustomAttributes.cs" />
     <Compile Include="Domain\Auth\AuthUserGroups.cs" />
+    <Compile Include="Domain\Auth\AuthUserVerifyCodes.cs" />
     <Compile Include="Domain\Auth\caTenantBase.cs" />
     <Compile Include="Domain\Employee\Address.cs" />
     <Compile Include="Domain\AttLogs\AttLogsStamps.cs" />
