Minor fixes to API's + fixes for deleted TenantLocation session issue

--- a/WMS/Web.config
+++ b/WMS/Web.config
@@ -54,7 +54,7 @@
   </location>
   <connectionStrings>
     <!--connection strings for Development Laptop-->
-    <add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEV-LAPTOP2;Initial Catalog=LinkV1.2873;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True" />
+    <add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEV-LAPTOP2;Initial Catalog=IceStoneOrderingV1.2874;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True" />
     <!--connection strings for Sattar Laptop-->
     <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEV-LAPTOP3;Initial Catalog=LinkV1.2498;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True" />-->
     <!--connection strings for Development PC-->
@@ -111,6 +111,9 @@
     <add key="ImportCipherLabProductFilePath" value="C:\Users\sami\Desktop\Product Files to Import\CipherLabProductList.csv" />
     <add key="ImportScanSourceProductFilePath" value="C:\Users\sami\Desktop\Product Files to Import\ScanSourceProductFile.txt" />
     <add key="MerakiSecretKey" value="1d9399b50f91cf1672d709744e3d70b93083eb04" />
+    <add key="SMSBroadcastUser" value="Ganedata01" />
+    <add key="SMSBroadcastPassword" value="92DqXS3tfh" />
+
 
   </appSettings>
   <!--
