added product attribute and categories association import feature.

--- a/GaneEcommerce.Entities/Ganedata.Core.Entities.csproj
+++ b/GaneEcommerce.Entities/Ganedata.Core.Entities.csproj
@@ -195,6 +195,9 @@
     <Compile Include="Domain\Auth\AuthUserLoginActivity.cs" />
     <Compile Include="Domain\Auth\AuthUserprofile.cs" />
     <Compile Include="Domain\Auth\Module.cs" />
+    <Compile Include="Domain\ImportModels\SortedProductCategoriesAssociationsImportModel.cs" />
+    <Compile Include="Domain\ImportModels\ProductsCategoriesAssociationsImportModel.cs" />
+    <Compile Include="Domain\ImportModels\ProductAttributeImportModel.cs" />
     <Compile Include="Domain\Models\ApiCredentials.cs" />
     <Compile Include="Domain\Models\ProductAttributeMap.cs" />
     <Compile Include="Domain\Models\ProductAvailabilityNotifyQueue.cs" />
