--- a/GaneEcommerce.Data/Ganedata.Core.Data.csproj
+++ b/GaneEcommerce.Data/Ganedata.Core.Data.csproj
@@ -1031,6 +1031,10 @@
     <Compile Include="Migrations\202008031230225_user-verification-codes-table-added.designer.cs">
       <DependentUpon>202008031230225_user-verification-codes-table-added.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202008051214443_increase_value_field_size_in_ProductAttribiteValues_table.cs" />
+    <Compile Include="Migrations\202008051214443_increase_value_field_size_in_ProductAttribiteValues_table.designer.cs">
+      <DependentUpon>202008051214443_increase_value_field_size_in_ProductAttribiteValues_table.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyDbConfiguration.cs" />
     <Compile Include="Helpers\DataImportFactory.cs" />
     <Compile Include="IApplicationContext.cs" />
@@ -2124,6 +2128,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202008031230225_user-verification-codes-table-added.resx">
       <DependentUpon>202008031230225_user-verification-codes-table-added.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202008051214443_increase_value_field_size_in_ProductAttribiteValues_table.resx">
+      <DependentUpon>202008051214443_increase_value_field_size_in_ProductAttribiteValues_table.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
