--- a/WarehouseEcommerce/Web.config
+++ b/WarehouseEcommerce/Web.config
@@ -16,13 +16,13 @@
   </configSections>
   <connectionStrings>
     <!--Connection strings for Development Laptop-->
-    <add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEV-LAPTOP2;Initial Catalog=LinkV1.2873;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True"/>
+    <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEV-LAPTOP2;Initial Catalog=LinkV1.2873;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True"/>-->
     <!--Connection strings for Sattar Laptop-->
     <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEV-LAPTOP3;Initial Catalog=LinkV1.2498;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True" />-->
     <!--Connection strings for Naveed PC-->
     <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DESKTOP-H9GO0QC\SQLSERVER2019;Initial Catalog=LinkV1.2873; Integrated Security=False;User Id=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" />-->
     <!--Connection string UMER PC-->
-    <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEVELOPMENT-PC4\MSSQLSERVER01;Initial Catalog=LinkV1.2498; Integrated Security=false;User Id=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=100" />-->
+    <add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEVELOPMENT-PC4\MSSQLSERVER01;Initial Catalog=GaneIntranetV1.2852; Integrated Security=false;User Id=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=100" />
     <!--Connection string UMER Laptop-->
     <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=HAIER-PC;Initial Catalog=University; Integrated Security=true; MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=100" />-->
   </connectionStrings>
@@ -68,13 +68,13 @@
     <!--Session string Development-PC2-->
     <!--<sessionState mode="SQLServer" sqlConnectionString="Data Source=DEVELOPMENT-PC2\MSSQLSERVER01;Integrated Security=False;User Id=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" timeout="240" />-->
     <!--Session string Development-Laptop-->
-    <sessionState mode="SQLServer" sqlConnectionString="Data Source=DEV-LAPTOP2;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True" timeout="300" />
+    <!--<sessionState mode="SQLServer" sqlConnectionString="Data Source=DEV-LAPTOP2;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True" timeout="300" />-->
     <!--Session string Sattar Laptop-->
     <!--<sessionState mode="SQLServer" sqlConnectionString="Data Source=DEV-LAPTOP3;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True" timeout="300" />-->
     <!--Session string Naveed PC-->
     <!--<sessionState mode="SQLServer" sqlConnectionString="Data Source=DESKTOP-H9GO0QC\SQLSERVER2019;Integrated Security=false;User Id=sa;Password=developer;MultipleActiveResultSets=True;" timeout="300" />-->
     <!--Session string UMER PC-->
-    <!--<sessionState mode="SQLServer" sqlConnectionString="Data Source=DEVELOPMENT-PC4\MSSQLSERVER01;Integrated Security=false;User Id=sa;Password=developer;MultipleActiveResultSets=True;" timeout="300" />-->
+    <sessionState mode="SQLServer" sqlConnectionString="Data Source=DEVELOPMENT-PC4\MSSQLSERVER01;Integrated Security=false;User Id=sa;Password=developer;MultipleActiveResultSets=True;" timeout="300" />
     <!--Session string UMER Laptop-->
     <!--<sessionState mode="SQLServer" sqlConnectionString="Data Source=HAIER-PC;Integrated Security=true;MultipleActiveResultSets=True;" timeout="300" />-->
     <compilation targetFramework="4.7.2" debug="true" />
