--- a/GaneEcommerce.Entities/Ganedata.Core.Entities.csproj
+++ b/GaneEcommerce.Entities/Ganedata.Core.Entities.csproj
@@ -232,6 +232,7 @@
     <Compile Include="Domain\Models\ProductManufacturer.cs" />
     <Compile Include="Domain\Models\UISettingItem.cs" />
     <Compile Include="Domain\Models\UISetting.cs" />
+    <Compile Include="Domain\ViewModels\ProductSearchResultViewModel.cs" />
     <Compile Include="Domain\ViewModels\ApiCredentialsViewModel.cs" />
     <Compile Include="Domain\ViewModels\ApiModels\TenantLocationsSync.cs" />
     <Compile Include="Domain\ViewModels\FileUploaderViewModel.cs" />
