--- a/GaneEcommerce.Data/Ganedata.Core.Data.csproj
+++ b/GaneEcommerce.Data/Ganedata.Core.Data.csproj
@@ -1039,6 +1039,10 @@
     <Compile Include="Migrations\202008071924483_loyalty-fields-in-account.designer.cs">
       <DependentUpon>202008071924483_loyalty-fields-in-account.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202008251204539_added_our_brands_relates_flags.cs" />
+    <Compile Include="Migrations\202008251204539_added_our_brands_relates_flags.designer.cs">
+      <DependentUpon>202008251204539_added_our_brands_relates_flags.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyDbConfiguration.cs" />
     <Compile Include="Helpers\DataImportFactory.cs" />
     <Compile Include="IApplicationContext.cs" />
@@ -2138,6 +2142,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202008071924483_loyalty-fields-in-account.resx">
       <DependentUpon>202008071924483_loyalty-fields-in-account.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202008251204539_added_our_brands_relates_flags.resx">
+      <DependentUpon>202008251204539_added_our_brands_relates_flags.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
