--- a/WarehouseEcommerce/WarehouseEcommerce.csproj
+++ b/WarehouseEcommerce/WarehouseEcommerce.csproj
@@ -279,6 +279,7 @@
     <Compile Include="ViewModels\GroupedProductViewModel.cs" />
     <Compile Include="ViewModels\ProductDetailViewModel.cs" />
     <Compile Include="ViewModels\ProductListViewModel.cs" />
+    <Compile Include="ViewModels\OurBrandsViewModel.cs" />
     <Compile Include="ViewModels\ProductViewModel.cs" />
     <Compile Include="ViewModels\UsersViewModel.cs" />
   </ItemGroup>
@@ -1428,6 +1429,7 @@
     <Content Include="Views\Theme\University\Products\_ProductDetailBreadCrumb.cshtml" />
     <Content Include="Views\Theme\University\Products\_ProductImagesGallery.cshtml" />
     <Content Include="Views\Theme\University\Products\brands.cshtml" />
+    <Content Include="Views\Theme\University\Shared\_OurBrands.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
