--- a/WMS/WarehouseZone.csproj
+++ b/WMS/WarehouseZone.csproj
@@ -95,116 +95,118 @@
     <Reference Include="CsvHelper, Version=15.0.0.0, Culture=neutral, PublicKeyToken=8c4959082be5c823, processorArchitecture=MSIL">
       <HintPath>..\packages\CsvHelper.15.0.5\lib\net47\CsvHelper.dll</HintPath>
     </Reference>
-    <Reference Include="DevExpress.Charts.v19.2.Core">
+    <Reference Include="DevExpress.Charts.v20.1.Core">
     </Reference>
-    <Reference Include="DevExpress.CodeParser.v19.2, Version=19.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
-    <Reference Include="DevExpress.CodeParser.v19.2">
+    <Reference Include="DevExpress.CodeParser.v20.1, Version=20.1.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.CodeParser.v20.1">
     </Reference>
-    <Reference Include="DevExpress.Dashboard.v19.2.Core">
+    <Reference Include="DevExpress.Dashboard.v20.1.Core">
     </Reference>
-    <Reference Include="DevExpress.Dashboard.v19.2.Web">
+    <Reference Include="DevExpress.Dashboard.v20.1.Web">
     </Reference>
-    <Reference Include="DevExpress.Dashboard.v19.2.Web.Mvc5">
+    <Reference Include="DevExpress.Dashboard.v20.1.Web.Mvc5">
     </Reference>
-    <Reference Include="DevExpress.Data.v19.2, Version=19.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL">
+    <Reference Include="DevExpress.Data.v20.1, Version=20.1.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
     </Reference>
-    <Reference Include="DevExpress.DataAccess.v19.2, Version=19.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
-    <Reference Include="DevExpress.DataAccess.v19.2">
+    <Reference Include="DevExpress.DataAccess.v20.1, Version=20.1.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.DataAccess.v20.1">
     </Reference>
-    <Reference Include="DevExpress.Map.v19.2.Core">
+    <Reference Include="DevExpress.Map.v20.1.Core">
     </Reference>
-    <Reference Include="DevExpress.Office.v19.2.Core, Version=19.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
-    <Reference Include="DevExpress.Office.v19.2.Core">
+    <Reference Include="DevExpress.Office.v20.1.Core, Version=20.1.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.Office.v20.1.Core">
     </Reference>
-    <Reference Include="DevExpress.Pdf.v19.2.Core">
+    <Reference Include="DevExpress.Pdf.v20.1.Core">
     </Reference>
-    <Reference Include="DevExpress.PivotGrid.v19.2.Core">
+    <Reference Include="DevExpress.PivotGrid.v20.1.Core">
     </Reference>
-    <Reference Include="DevExpress.Printing.v19.2.Core, Version=19.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL">
+    <Reference Include="DevExpress.Printing.v20.1.Core, Version=20.1.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
     </Reference>
-    <Reference Include="DevExpress.RichEdit.v19.2.Core, Version=19.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL">
+    <Reference Include="DevExpress.RichEdit.v20.1.Core, Version=20.1.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
     </Reference>
-    <Reference Include="DevExpress.RichEdit.v19.2.Export, Version=19.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL">
+    <Reference Include="DevExpress.RichEdit.v20.1.Export, Version=20.1.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
     </Reference>
-    <Reference Include="DevExpress.Sparkline.v19.2.Core">
+    <Reference Include="DevExpress.Sparkline.v20.1.Core">
     </Reference>
-    <Reference Include="DevExpress.SpellChecker.v19.2.Core">
+    <Reference Include="DevExpress.SpellChecker.v20.1.Core">
     </Reference>
-    <Reference Include="DevExpress.Spreadsheet.v19.2.Core">
+    <Reference Include="DevExpress.Spreadsheet.v20.1.Core">
     </Reference>
-    <Reference Include="DevExpress.TreeMap.v19.2.Core">
+    <Reference Include="DevExpress.TreeMap.v20.1.Core">
     </Reference>
-    <Reference Include="DevExpress.Utils.v19.2">
+    <Reference Include="DevExpress.Data.Desktop.v20.1">
     </Reference>
-    <Reference Include="DevExpress.Web.ASPxGauges.v19.2">
+    <Reference Include="DevExpress.Utils.v20.1">
     </Reference>
-    <Reference Include="DevExpress.Web.ASPxHtmlEditor.v19.2">
+    <Reference Include="DevExpress.Web.ASPxGauges.v20.1">
     </Reference>
-    <Reference Include="DevExpress.Web.ASPxPivotGrid.v19.2">
+    <Reference Include="DevExpress.Web.ASPxHtmlEditor.v20.1">
     </Reference>
-    <Reference Include="DevExpress.Web.ASPxRichEdit.v19.2">
+    <Reference Include="DevExpress.Web.ASPxPivotGrid.v20.1">
     </Reference>
-    <Reference Include="DevExpress.Web.ASPxScheduler.v19.2">
+    <Reference Include="DevExpress.Web.ASPxRichEdit.v20.1">
     </Reference>
-    <Reference Include="DevExpress.Web.ASPxSpellChecker.v19.2">
+    <Reference Include="DevExpress.Web.ASPxScheduler.v20.1">
     </Reference>
-    <Reference Include="DevExpress.Web.ASPxSpreadsheet.v19.2">
+    <Reference Include="DevExpress.Web.ASPxSpellChecker.v20.1">
     </Reference>
-    <Reference Include="DevExpress.Web.ASPxThemes.v19.2, Version=19.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL">
+    <Reference Include="DevExpress.Web.ASPxSpreadsheet.v20.1">
+    </Reference>
+    <Reference Include="DevExpress.Web.ASPxThemes.v20.1, Version=20.1.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
     </Reference>
-    <Reference Include="DevExpress.Web.ASPxGantt.v19.2">
+    <Reference Include="DevExpress.Web.ASPxGantt.v20.1">
     </Reference>
-    <Reference Include="DevExpress.Web.ASPxTreeList.v19.2">
+    <Reference Include="DevExpress.Web.ASPxTreeList.v20.1">
     </Reference>
-    <Reference Include="DevExpress.Web.Mvc5.v19.2">
+    <Reference Include="DevExpress.Web.Mvc5.v20.1">
     </Reference>
-    <Reference Include="DevExpress.Web.Resources.v19.2">
+    <Reference Include="DevExpress.Web.Resources.v20.1">
     </Reference>
-    <Reference Include="DevExpress.Web.v19.2, Version=19.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL">
+    <Reference Include="DevExpress.Web.v20.1, Version=20.1.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
     </Reference>
-    <Reference Include="DevExpress.Xpo.v19.2, Version=19.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
-    <Reference Include="DevExpress.Xpo.v19.2">
+    <Reference Include="DevExpress.Xpo.v20.1, Version=20.1.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.Xpo.v20.1">
     </Reference>
-    <Reference Include="DevExpress.XtraBars.v19.2">
+    <Reference Include="DevExpress.XtraBars.v20.1">
     </Reference>
-    <Reference Include="DevExpress.XtraCharts.v19.2">
+    <Reference Include="DevExpress.XtraCharts.v20.1">
     </Reference>
-    <Reference Include="DevExpress.XtraCharts.v19.2.Web">
+    <Reference Include="DevExpress.XtraCharts.v20.1.Web">
     </Reference>
-    <Reference Include="DevExpress.XtraEditors.v19.2">
+    <Reference Include="DevExpress.XtraEditors.v20.1">
     </Reference>
-    <Reference Include="DevExpress.XtraGauges.v19.2.Core">
+    <Reference Include="DevExpress.XtraGauges.v20.1.Core">
     </Reference>
-    <Reference Include="DevExpress.XtraGauges.v19.2.Presets">
+    <Reference Include="DevExpress.XtraGauges.v20.1.Presets">
     </Reference>
-    <Reference Include="DevExpress.XtraGauges.v19.2.Win">
+    <Reference Include="DevExpress.XtraGauges.v20.1.Win">
     </Reference>
-    <Reference Include="DevExpress.XtraLayout.v19.2">
+    <Reference Include="DevExpress.XtraLayout.v20.1">
     </Reference>
-    <Reference Include="DevExpress.XtraMap.v19.2">
+    <Reference Include="DevExpress.XtraMap.v20.1">
     </Reference>
-    <Reference Include="DevExpress.XtraPivotGrid.v19.2">
+    <Reference Include="DevExpress.XtraPivotGrid.v20.1">
     </Reference>
-    <Reference Include="DevExpress.XtraPrinting.v19.2">
+    <Reference Include="DevExpress.XtraPrinting.v20.1">
     </Reference>
-    <Reference Include="DevExpress.XtraReports.v19.2">
+    <Reference Include="DevExpress.XtraReports.v20.1">
     </Reference>
-    <Reference Include="DevExpress.XtraReports.v19.2.Web">
+    <Reference Include="DevExpress.XtraReports.v20.1.Web">
     </Reference>
-    <Reference Include="DevExpress.XtraReports.v19.2.Web.WebForms, Version=19.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL">
+    <Reference Include="DevExpress.XtraReports.v20.1.Web.WebForms, Version=20.1.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
     </Reference>
-    <Reference Include="DevExpress.XtraScheduler.v19.2.Core">
+    <Reference Include="DevExpress.XtraScheduler.v20.1.Core">
     </Reference>
-    <Reference Include="DevExpress.XtraTreeList.v19.2">
+    <Reference Include="DevExpress.XtraTreeList.v20.1">
     </Reference>
-    <Reference Include="DevExpress.XtraTreeMap.v19.2">
+    <Reference Include="DevExpress.XtraTreeMap.v20.1">
     </Reference>
     <Reference Include="DocumentFormat.OpenXml, Version=2.11.3.0, Culture=neutral, PublicKeyToken=8fb06cb64d019a17, processorArchitecture=MSIL">
       <HintPath>..\packages\DocumentFormat.OpenXml.2.11.3\lib\net46\DocumentFormat.OpenXml.dll</HintPath>
