--- a/WarehouseEcommerce/WarehouseEcommerce.csproj
+++ b/WarehouseEcommerce/WarehouseEcommerce.csproj
@@ -1431,7 +1431,7 @@
     <Content Include="Views\Theme\University\Products\_RelatedProducts.cshtml" />
     <Content Include="Views\Theme\University\Products\_ProductDetailActionsButtons.cshtml" />
     <Content Include="Views\Theme\University\Products\_ProductDetailBreadCrumb.cshtml" />
-    <Content Include="Views\Theme\University\Products\_ProductImagesGallery.cshtml" />
+    <Content Include="Views\Theme\University\Products\_ProductFilesGallery.cshtml" />
     <Content Include="Views\Theme\University\Products\brands.cshtml" />
     <Content Include="Views\Theme\University\Shared\_OurBrands.cshtml" />
     <Content Include="Scripts\jquery-3.5.1.slim.min.map" />
