added website small logo upload + some style fixes and code cleaning. added show more/less toggle to products description part

--- a/GaneEcommerce.Data/Ganedata.Core.Data.csproj
+++ b/GaneEcommerce.Data/Ganedata.Core.Data.csproj
@@ -1051,6 +1051,10 @@
     <Compile Include="Migrations\202008271330560_added_preorder_feature_to_products.designer.cs">
       <DependentUpon>202008271330560_added_preorder_feature_to_products.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202008280849405_added_SmallLogo_to_TenantsWebsites_table.cs" />
+    <Compile Include="Migrations\202008280849405_added_SmallLogo_to_TenantsWebsites_table.designer.cs">
+      <DependentUpon>202008280849405_added_SmallLogo_to_TenantsWebsites_table.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyDbConfiguration.cs" />
     <Compile Include="Helpers\DataImportFactory.cs" />
     <Compile Include="IApplicationContext.cs" />
@@ -2159,6 +2163,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202008271330560_added_preorder_feature_to_products.resx">
       <DependentUpon>202008271330560_added_preorder_feature_to_products.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202008280849405_added_SmallLogo_to_TenantsWebsites_table.resx">
+      <DependentUpon>202008280849405_added_SmallLogo_to_TenantsWebsites_table.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
