LOcation create and edit views UI issues fixed

--- a/WMS/Web.config
+++ b/WMS/Web.config
@@ -91,7 +91,7 @@
     <add key="DefaultReplyToAddress" value="repairs@hiveliving.co.uk" />
     <add key="DefaultMailFromText" value="repairs@hiveliving.co.uk" />
     <add key="vs:EnableBrowserLink" value="false" />
-    <add key="MiniProfilerEnabled" value="true" />
+    <add key="MiniProfilerEnabled" value="false" />
     <add key="GS128LotNumberLength" value="6" />
     <add key="GS128SerialNumberLength" value="20" />
     <add key="WarmUpUrl" value="https://hive.warehouse.zone" />
