--- a/WarehouseDpdLabelPrint/App.config
+++ b/WarehouseDpdLabelPrint/App.config
@@ -6,6 +6,7 @@
   <appSettings>
     <add key="TenantId" value="1" />
     <add key="SiteUrl" value="http://localhost:8005/" />
+    <add key="AccessSerial" value="IxAzoxkBFW0x" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <system.web>
